# Ridiculous-LLM-Compression

./: .gitignore  README.md  finding_similar_heads.ipynb  pyproject.toml  requirements.txt
HiddenStatesMeasures/: diff_graphics.py  inference_tiny_llama_reduce.ipynb  save_model_tokens.py
PruningHealing/: README.md  inference_tiny_llama.ipynb  log.json  lora_smart_approach.ipynb  main.py  quality_check_after_tuning.py  requirements.txt  visualise_logs.py
hvostchedUser/: 2lrm_heatmap_v2.py  experiments_v2.py  layer_replacement_heatmap_v2.py  perplexity_eval.py
igor_old_experiments/logs/: train_loss.txt
igor_old_experiments/notebooks/: llama_lora_fintuning.ipynb
igor_old_experiments/scripts/: inference_tinyllama.py  pruned_model_tuning.py  quality_check_after_prunning.py
polina_experiments/: README_head_merging.md  compute_head_similarities.py  merge_heads_and_eval.py  plot_perplexities.py  run_head_merging_experiment.py  run_head_merging_experiment.sh  step1_find_similar_heads.py  step2_merge_heads.py  step3_evaluate_and_visualize.py  step3_visualize_results.py  unified_head_merging_experiment.py
polina_experiments/results/: model_preparation.ipynb
polina_exps/: experiments.py  finding and merging heads_.ipynb
pollyleo_exps/exp_1/: README_new_scripts.md  compute_head_similarities.py  head_analysis_examples.md  merge_heads_and_eval.py
results/head_merging/: results_threshold_0.98.json
scripts/: README.md  dataset_building.py  finetuning.py  prune_layers.py  unimportant_decoder_search.py
src/notebooks/: results.ipynb  (+5 more)
workspace/: experiment_log.json
(+137 files in other folders)
