[project]
name = "pruninghealing"
version = "0.1.0"
description = "A modular library for pruning and healing large language models with LoRA fine-tuning"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.31.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.40.0",
    "accelerate>=0.21.0",
    "datasets",
    "tokenizers",
    "sentencepiece",
    "matplotlib",
    "pandas",
    "numpy",
    "tensorboard",
    "jupyter",
    "scikit-learn",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
